--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ python-jose = {extras = ["cryptography"], version = ">=3.4.0,<4.0.0"}
 passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
 alembic = ">=1.15.2,<2.0.0"
 httpx = ">=0.28.1,<0.29.0"
+pydantic-settings = "^2.9.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.5"
