--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,10 +6,11 @@ COPY pyproject.toml ./
 
 RUN pip install poetry && \
     poetry config virtualenvs.create false && \
-    poetry install
+    poetry install --no-interaction
 
 COPY app/ ./app/
 
 EXPOSE 8000
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["/bin/sh", "-c", " \
+  poetry run python -m main"]
