--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,14 +12,15 @@ fastapi = ">=0.115.12,<0.116.0"
 uvicorn = ">=0.34.2,<0.35.0"
 sqlalchemy = ">=2.0.40,<3.0.0"
 pydantic = {extras = ["email"], version = "^2.11.4"}
-python-jose = {extras = ["cryptography"], version = ">=3.4.0,<4.0.0"}
-passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
+python-jose = { extras = ["cryptography"], version = ">=3.4.0,<4.0.0" }
+passlib = { extras = ["bcrypt"], version = ">=1.7.4,<2.0.0" }
 alembic = ">=1.15.2,<2.0.0"
 httpx = ">=0.28.1,<0.29.0"
 pydantic-settings = "^2.9.1"
 aiosqlite = "^0.21.0"
 tzdata = "^2025.2"
 colorama = "^0.4.6"
+python-multipart = "^0.0.20"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.5"
@@ -43,10 +44,10 @@ show-fixes = true
 
 [tool.ruff.lint]
 select = [
-    "E",     # Error
-    "F",     # Pyflakes
-    "I",     # Isort
-    "W",     # Pycodestyle
+    "E", # Error
+    "F", # Pyflakes
+    "I", # Isort
+    "W", # Pycodestyle
 ]
 
 exclude = [
