[SQR] fix: fix `Dockerfile` and `docker-compose`

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 CONFIG__RUN__DEBUG=False
-CONFIG__DATABASE__DB_URL=sqlite+aiosqlite:///data/notes.sqlite3
+CONFIG__DATABASE__DB_URL=sqlite+aiosqlite:///app/notes.sqlite3
 
 CONFIG__SECURITY__JWT_PUBLIC_KEY="<public key>"
 CONFIG__SECURITY__JWT_PRIVATE_KEY="<private key>"
