--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,16 +7,12 @@ COPY pyproject.toml ./
 RUN pip install --no-cache-dir poetry && \
     poetry config virtualenvs.create false && \
     poetry install --no-interaction --no-root
+COPY . /app
 
-COPY . .
-
-RUN mkdir -p /app/data
+RUN poetry install --no-interaction
 
 EXPOSE 8000
 
-RUN echo '#!/bin/sh\n\
-poetry run alembic upgrade head\n\
-poetry run uvicorn main:app --host 0.0.0.0 --port 8000' > /app/start.sh && \
-chmod +x /app/start.sh
-
-CMD ["/app/start.sh"]
+CMD ["/bin/sh", "-c", " \
+  poetry run alembic upgrade head; \
+  poetry run python -m main"]
