[SQR] feat(translation): implement translate, detect and languages endpoints

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,4 @@ CONFIG__DATABASE__DB_URL=sqlite+aiosqlite:///app/notes.sqlite3
 
 CONFIG__SECURITY__JWT_PUBLIC_KEY="<public key>"
 CONFIG__SECURITY__JWT_PRIVATE_KEY="<private key>"
+СONFIG__TRANSLATION__API_KEY="<your rapidapi key here>"
