[SQR] feat(translation): add Redis caching for translations

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,5 @@ CONFIG__DATABASE__DB_URL=sqlite+aiosqlite:///app/notes.sqlite3
 CONFIG__SECURITY__JWT_PUBLIC_KEY="<public key>"
 CONFIG__SECURITY__JWT_PRIVATE_KEY="<private key>"
 СONFIG__TRANSLATION__API_KEY="<your rapidapi key here>"
+CONFIG__REDIS__URL=redis://redis:6379/0
+CONFIG__TRANSLATION__CACHE_TTL=86400
