--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,7 @@ tzdata = "^2025.2"
 pyjwt = "^2.10.1"
 colorama = "^0.4.6"
 python-multipart = "^0.0.20"
+redis = {extras = ["hiredis"], version = "^5.0.1"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.5"
