--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - redis
 
   redis:
+    container_name: redis
+    hostname: redis
     image: redis:7-alpine
     ports:
       - "6379:6379"
